crates/contextdb-core/tests/fixtures/compile_fail/lsn_into_txid.rs
use contextdb_core::{Lsn, TxId};

fn main() {
    let lsn = Lsn(1);
    let _tx: TxId = lsn;
}
