crates/contextdb-core/tests/fixtures/compile_fail/lsn_into_txid.stderr
error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/lsn_into_txid.rs:5:21
  |
5 |     let _tx: TxId = lsn;
  |              ----   ^^^ expected `TxId`, found `Lsn`
  |              |
  |              expected due to this
